# pontarius-gpg

./: LICENSE  README.md  Setup.hs  hs-gpgme.cabal  pontarius-gpg.cabal
src/: .hs  Bindings.chs  GpgMe.hs  Main.hs
src/Gpg/: Basic.hs  EditKey.hs  GenRevoke.hs  Run.hs
src/cbits/: wrapper.c
