name:                hs-gpgme
version:             0.0.0
synopsis:            partial bindings to gpgme
description:         partial bindings to gpgme
license:             BSD3
license-file:        LICENSE
author:              Philipp Balzarek
maintainer:          p.balzarek@googlemail.com
copyright:           2014 Philipp Balzarek
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  ghc-options:       -Wall -O2
  exposed-modules:   GpgMe
  other-modules:     Bindings
  build-depends:     base >= 4 && <5
                   , text
                   , bytestring
                   , openpgp
                   , binary
                   , unix
--  C-Sources:	     src/cbits/wrapper.c
  build-tools:	     c2hs
  extra-libraries:   gpgme, assuan, gpg-error
  C-Sources:	     src/cbits/wrapper.c
