name:                pontarius-gpg
version:             0.0.0
synopsis:            partial bindings to gpgme
description:         partial bindings to gpgme
license:             BSD3
license-file:        LICENSE
author:              Philipp Balzarek
maintainer:          p.balzarek@googlemail.com
copyright:           2014 Philipp Balzarek
category:            Cryptography
build-type:          Custom
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  ghc-options:       -O2
  exposed-modules:   GpgMe
                   , Gpg.GenRevoke
  other-modules:     Bindings
                   , Gpg.EditKey
                   , Gpg.Basic
                   , Gpg.Run

  build-depends:     attoparsec
                   , base >= 4 && <5
                   , binary
                   , bytestring
                   , containers >= 0.5.5.1
                   , free
                   , mtl
                   , openpgp
                   , process
                   , text
                   , unix
  C-Sources:	     src/cbits/wrapper.c
  build-tools:	     c2hs
  extra-libraries:   gpgme, assuan, gpg-error
  C-Sources:	     src/cbits/wrapper.c

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && <5
                   , text
                   , bytestring
                   , hs-gpgme
